--- a/viet_decisions_l_german.yml
+++ b/viet_decisions_l_german.yml
@@ -67,9 +67,94 @@
  VIET_decision_strange_trails_desc:0 "All these dreams I've been having about the fool for love have preoccupied my thoughts as of late. I now think I've been dreaming of a place nearby. I know where it is. I've been there before. I must visit it again. Perhaps going there will ease my mind and reveal why I've been dreaming about it."
  VIET_decision_strange_trails_effect_tooltip:0 "You will follow the strange trails to find the place you've been dreaming about."
  VIET_decision_strange_trails_confirm:0 "I seek answers, but I don't even know the question."
+ VIET_decision_learn_shorthand_techniques:0 "Learn Shorthand Techniques"
+ VIET_decision_learn_shorthand_techniques_tooltip:0 "I've heard there are some scribes or scholars nearby who can teach me about shorthand."
+ VIET_decision_learn_shorthand_techniques_desc:0 "I've heard there are some scribes or scholars nearby who can teach me advanced shorthand techniques, so that I can write more quickly. It's best I commit to learning more about this while I still have some interest in it."
+ VIET_decision_learn_shorthand_techniques_effect_tooltip:0 "After several months of studying, you will gain some kind of #P positive#! [character_modifier|E] increasing some of your [skills|E]"
+ VIET_decision_learn_shorthand_techniques_effect_tooltip_2:0 "How powerful the [character_modifier|E] is depends on your [skills|E], [traits|E], and other factors"
+ VIET_decision_learn_shorthand_techniques_confirm:0 "I think I've found a scribe who's willing to teach."
+ VIET_decision_learn_shorthand_techniques_context_tooltip:0 "#emphasis Historical Context:#! Shorthand is any abbreviated method of writing quickly. These methods were historically developed across many literate cultures. They were - and still are - particularly useful for certain professions like clerks and scribes, where information needed to be recorded swiftly and efficiently."
+ VIET_decision_buy_valuable_medicinal_berries:0 "Buy Valuable Medicinal Berries"
+ VIET_decision_buy_valuable_medicinal_berries_tooltip:0 "There are berries that have supposed healing properties"
+ VIET_decision_buy_valuable_medicinal_berries_desc:0 "It seems there are parts of my realm where the berries are said to possess various medicinal properties. I should buy some for myself!"
+ VIET_decision_buy_valuable_medicinal_berries_effect_tooltip:0 "You choose how many berries to purchase, determining how long the [GetModifier('VIET_berry_good_medicine').GetNameWithTooltip] [character_modifier|E] will last #weak (Minimum cost: @gold_icon! 15)#!"
+ VIET_decision_buy_valuable_medicinal_berries_confirm:0 "Berry good."
+ VIET_decision_buy_valuable_medicinal_berries_req:0 "Any [county|E] in your [domain|E] has the [GetModifier('VIET_berry_good_medicine_county').GetNameWithTooltip] [county_modifier|E]"
+ VIET_decision_buy_valuable_medicinal_berries_context_tooltip:0 "#emphasis Historical Context:#! Berries have been part of many cultures since the dawn of time, and have been used as food, medicine, a source for dyes, and more."
+ VIET_decision_employ_renowned_blacksmiths:0 "Employ Renowned Blacksmiths For Armies"
+ VIET_decision_employ_renowned_blacksmiths_tooltip:0 "My soldiers could always use better weapons and armor."
+ VIET_decision_employ_renowned_blacksmiths_desc:0 "There is a part of my realm that is famous for its blacksmiths. Perhaps I can make use of some of them in my military, so that they can create, repair, and maintain my troops' weapons and armor."
+ VIET_decision_employ_renowned_blacksmiths_req:0 "Any [county|E] in your [domain|E] has the [GetModifier('VIET_renowned_blacksmith_region').GetNameWithTooltip] [county_modifier|E]"
+ VIET_decision_employ_renowned_blacksmiths_effect_tooltip:0 "You will choose what the blacksmiths you employ will focus on:"
+ VIET_decision_employ_renowned_blacksmiths.armor:0 "Armor"
+ VIET_decision_employ_renowned_blacksmiths.weapons:0 "Weapons"
+ VIET_decision_employ_renowned_blacksmiths.supplies:0 "Supplies"
+ VIET_decision_employ_renowned_blacksmiths_confirm:0 "Let's meet them."
+ VIET_decision_employ_renowned_blacksmiths_context_tooltip:0 "#emphasis Historical Context:#! Iron smithing has been a major craft in many societies across the Old World since ancient times. Every village and army needed someone around who could forge iron into useful tools (including weapons and armor), or to repair said tools."
+ VIET_decision_visit_legendary_burial_mound:0 "Visit a Legendary Burial Mound"
+ VIET_decision_visit_legendary_burial_mound_tooltip:0 "I should come to one of these fabled locations at least once in my lifetime."
+ VIET_decision_visit_legendary_burial_mound_desc:0 "I recently dedicated a shrine to a legendary figure who is said to be buried under a mound or hill that is specifically located in a part of my domain. Perhaps I should visit the shrine to pay my respects."
+ VIET_decision_visit_legendary_burial_mound_req:0 "Any [county|E] in your [domain|E] has the [GetModifier('VIET_tomb_monument_warrior').GetNameWithTooltip], [GetModifier('VIET_tomb_monument_holy').GetNameWithTooltip], or [GetModifier('VIET_tomb_monument_ruler').GetNameWithTooltip] [county_modifier|E]"
+ VIET_decision_visit_legendary_burial_mound_effect_tooltip:0 "You will be inspired during your visit, which will grant you a #P positive#! [character_modifier|E], the benefits of which will depend on who is buried there"
+ VIET_decision_visit_legendary_burial_mound_confirm:0 "Let's go to this place."
+ VIET_decision_visit_legendary_burial_mound_context_tooltip:0 "#emphasis Historical Context:#! Burial mounds or tumuli (singular #italic tumulus#!) can be found in virtually every part of the world, and some date back thousands of years. As such, there are often many local legends and myths associated with these sites."
+ VIET_decision_investigate_a_ghost_town:0 "Investigate a Ghost Town"
+ VIET_decision_investigate_a_ghost_town_tooltip:0 "I want to see some ghosts!"
+ VIET_decision_investigate_a_ghost_town_desc:0 "There is an area in my domain where stories of ghosts abound. It is said some of the settlements in this area are home to so-called "ghost towns," where the locals claim to witness seeing spirits moving about. I've been feeling a little brave lately and want to get to the bottom of this - are there really such ghosts out there?"
+ VIET_decision_investigate_a_ghost_town_req:0 "Any [county|E] in your [domain|E] has the [GetModifier('VIET_spirit_towns').GetNameWithTooltip] [county_modifier|E]"
+ VIET_decision_investigate_a_ghost_town_effect_tooltip_1:0 "You will travel to one of these so-called ghost towns and hopefully encounter some ghosts."
+ VIET_decision_investigate_a_ghost_town_effect_tooltip_2:0 "#N You will gain a noticeable amount of [stress|E] because you are [GetTrait('craven').GetName( GetPlayer )]#!"
+ VIET_decision_investigate_a_ghost_town_confirm:0 "I'll catch a glimpse of them, I'm sure."
+ VIET_decision_investigate_a_ghost_town_context_tooltip:0 "#emphasis Historical Context:#! The spirits of the dead have featured in the folklore and mythology of virtually every culture around the world since time immemorial. Likewise, every culture had its legends about places where ghosts would congregate and take care of their supernatural business."
+ VIET_decision_venerate_a_mummified_hermit:0 "Venerate a Mummified Hermit"
+ VIET_decision_venerate_a_mummified_hermit_tooltip:0 "I wish to pay my respects"
+ VIET_decision_venerate_a_mummified_hermit_desc:0 "Not too long ago, a famous hermit passed away while meditating in one of the territories I rule. His corpse, miraculously, is still standing upright and somehow resists any kind of decay - a sign of this man's spiritual strength, perhaps. The place where he passed away has become a minor pilgrimage site which I intend to visit."
+ VIET_decision_venerate_a_mummified_hermit_req:0 "Any [county|E] in your [domain|E] has the [GetModifier('VIET_holy_hermit_passes_away').GetNameWithTooltip] [county_modifier|E]"
+ VIET_decision_venerate_a_mummified_hermit_effect_tooltip:0 "You will visit to pay your respects to the mummified hermit, gaining [piety|E] and other boons"
+ VIET_decision_venerate_a_mummified_hermit_confirm:0 "Let's go there."
+ VIET_decision_venerate_a_mummified_hermit_context_tooltip:0 "#emphasis Historical Context:#! For centuries, there have been reports of Buddhist monks and nuns who died in the middle of meditation, and whose bodies, supposedly, were "naturally" mummified and resistant to decay. These were (and are), unsurprisingly, Buddhist sites of devotion and veneration."
+ VIET_decision_relax_at_a_giant_shade_tree:0 "Relax at a Giant Shade Tree"
+ VIET_decision_relax_at_a_giant_shade_tree_tooltip:0 "The tree must be very big"
+ VIET_decision_relax_at_a_giant_shade_tree_desc:0 "In my territories, there is a well-known shade tree in one of the villages. I think it's time I visited it and see whether its reputation is well-deserved."
+ VIET_decision_relax_at_a_giant_shade_tree_req:0 "Any [county|E] in your [domain|E] has the [GetModifier('VIET_giant_shade_tree').GetNameWithTooltip] [county_modifier|E]"
+ VIET_decision_relax_at_a_giant_shade_tree_effect_tooltip:0 "You will travel to a famous shade tree in your domain to relax and lose [stress|E]"
+ VIET_decision_relax_at_a_giant_shade_tree_confirm:0 "I can't wait to see it!"
+ VIET_decision_relax_at_a_giant_shade_tree_context_tooltip:0 "#emphasis Historical Context:#! Shade trees are large trees that were planted with the purpose of providing shade under its canopy and crown, or happened to grow in a place where it became such a thing to people living nearby."
+ VIET_decision_examine_ancient_stone_monument:0 "Examine Ancient Stone Monument"
+ VIET_decision_examine_ancient_stone_monument_tooltip:0 "What secrets might they hold?"
+ VIET_decision_examine_ancient_stone_monument_desc:0 "Ancient stone monuments might be a dime a dozen for some scholars, but there is one in particular that was recently discovered which has intrigued me. I intend to visit it and simply admire it and try to better understand it."
+ VIET_decision_examine_ancient_stone_monument_req:0 "Any [county|E] in your [domain|E] has the [GetModifier('VIET_flat_stone_monument').GetNameWithTooltip] [county_modifier|E]"
+ VIET_decision_examine_ancient_stone_monument_effect_tooltip:0 "You will travel to and survey an ancient stone monument in your domain to lose [stress|E] and gain [prestige|E] and [piety|E]"
+ VIET_decision_examine_ancient_stone_monument_confirm:0 "Let's get ready."
+ VIET_decision_examine_ancient_stone_monument_context_tooltip:0 "#emphasis Historical Context:#! Prehistoric stone monuments can be found in many places around the world. These monoliths, whose purpose is often uncertain or at least contested, inspired many legends and myths for later cultures that discovered them."
+ VIET_decision_purchase_dependable_donkeys:0 "Purchase Dependable Donkeys"
+ VIET_decision_purchase_dependable_donkeys_tooltip:0 "I could use more donkeys...."
+ VIET_decision_purchase_dependable_donkeys_desc:0 "Donkeys are an often underappreciated part of our community. A part of my realm is known for having very reliable and capable donkeys. Having some could be useful, as they might have a variety of applications for my soldiers or my servants at home."
+ VIET_decision_purchase_dependable_donkeys_req:0 "Any [county|E] in your [domain|E] has the [GetModifier('VIET_reliable_donkeys').GetNameWithTooltip] [county_modifier|E]"
+ VIET_decision_purchase_dependable_donkeys_effect_tooltip:0 "You will choose how many donkeys you wish to buy"
+ VIET_decision_purchase_dependable_donkeys_effect_tooltip_small:0 "#weak Cost @gold_icon! 30#!"
+ VIET_decision_purchase_dependable_donkeys_effect_tooltip_medium:0 "#weak Cost @gold_icon! 60#!"
+ VIET_decision_purchase_dependable_donkeys_effect_tooltip_large:0 "#weak Cost @gold_icon! 90#!"
+ VIET_decision_purchase_dependable_donkeys_confirm:0 "These donkeys will help us a lot."
+ VIET_decision_purchase_dependable_donkeys_context_tooltip:0 "$VIETmisc.3030.info$"
+ VIET_decision_add_more_dovecotes:0 "Add More Dovecotes To Your Residence"
+ VIET_decision_add_more_dovecotes_tooltip:0 "It would make me look more prestiguous."
+ VIET_decision_add_more_dovecotes_desc:0 "Even though I already have some dovecotes at my residence, lately I've considered building more, to house even greater numbers of pigeons here. It would increase my status and reputation, besides being practical too."
+ VIET_decision_add_more_dovecotes_effect_tooltip:0 "You will choose how many dovecotes you wish to build"
+ VIET_decision_add_more_dovecotes_effect_tooltip_small:0 "#weak Cost @gold_icon! 50#!"
+ VIET_decision_add_more_dovecotes_effect_tooltip_medium:0 "#weak Cost @gold_icon! 100#!"
+ VIET_decision_add_more_dovecotes_effect_tooltip_large:0 "#weak Cost @gold_icon! 150#!"
+ VIET_decision_add_more_dovecotes_confirm:0 "Let's do this."
+ VIET_decision_add_more_dovecotes_context_tooltip:0 "$VIETmisc.2074.info$"
+ VIET_decision_listen_to_wild_songbirds:0 "Listen to Wild Songbirds"
+ VIET_decision_listen_to_wild_songbirds_tooltip:0 "Their songs are sublime."
+ VIET_decision_listen_to_wild_songbirds_desc:0 "I have heard there is a spot in the wilderness nearby where one can often encounter wild songbirds. As someone who enjoys hearing these lovely creatures sing, I should visit that location soon."
+ VIET_decision_listen_to_wild_songbirds_effect_tooltip:0 "You will lose some [stress|E] and maybe even be inspired and get a [character_modifier|E]"
+ VIET_decision_listen_to_wild_songbirds_confirm:0 "I do need the time off."
+ VIET_decision_listen_to_wild_songbirds_context_tooltip:0 "#emphasis Biological Context:#! The #italic Passeri#! suborder of perching birds are known as songbirds, colloquially speaking. Consisting of over 5000 species, they are found all over the world, and famous for their diverse and elaborate bird songs, which have been admired by humans in many different cultures and time periods."
 
 
- # Character Interactions
+  # Character Interactions
  VIET_gift_baklava:0 "Present Gift of Special Pastries"
  VIET_gift_baklava_desc:0 "Buy various pastries, confectionary, and desserts made by a famous patissier as a gift for [recipient.GetShortUINameNoTooltip]"
  VIET_gift_baklava_effect_tooltip:0 "[recipient.GetShortUINameNoTooltip] will receive your chosen gift of desserts, which will give [recipient.GetHerHim] a [character_modifier|E]"
@@ -78,9 +163,21 @@
  VIET_gift_spices_effect_tooltip:0 "[recipient.GetShortUINameNoTooltip] will receive a special [character_modifier|E] representing the #V Five Spice Blend#!"
  VIET_decision_xxxxx:0 "xxxxx"
 
- # Character Interactions
+ # Activities
  activity_VIET_crow_appeasement:0 "Crow Appeasement"
  activity_VIET_crow_appeasement_name:0 "[ACTIVITY.GetOwner.GetNamePossessiveOrMy|U] Crow Appeasement"
  activity_VIET_crow_removal:0 "Crow Removal"
  activity_VIET_crow_removal_name:0 "[ACTIVITY.GetOwner.GetNamePossessiveOrMy|U] Crow Removal"
+ activity_VIET_visit_to_a_legendary_burial_mound:0 "Visit to a Legendary Burial Mound"
+ activity_VIET_visit_to_a_legendary_burial_mound_name:0 "[ACTIVITY.GetOwner.GetNamePossessiveOrMy|U] Visit to a Legendary Burial Mound"
+ activity_VIET_investigation_of_a_ghost_town:0 "Investigation of a Ghost Town"
+ activity_VIET_investigation_of_a_ghost_town_name:0 "[ACTIVITY.GetOwner.GetNamePossessiveOrMy|U] Investigation of a Ghost Town"
+ activity_VIET_veneration_of_a_mummified_hermit:0 "Veneration of a Mummified Hermit"
+ activity_VIET_veneration_of_a_mummified_hermit_name:0 "[ACTIVITY.GetOwner.GetNamePossessiveOrMy|U] Veneration of a Mummified Hermit"
+ activity_VIET_trip_giant_shade_tree:0 "Trip to a Giant Shade Tree"
+ activity_VIET_trip_giant_shade_tree_name:0 "[ACTIVITY.GetOwner.GetNamePossessiveOrMy|U] Trip to a Giant Shade Tree"
+ activity_VIET_trip_examine_ancient_stone_monument:0 "Trip to Examine an Ancient Stone Monument"
+ activity_VIET_trip_examine_ancient_stone_monument_name:0 "[ACTIVITY.GetOwner.GetNamePossessiveOrMy|U] Trip to Examine an Ancient Stone Monument"
+ activity_VIET_relaxation_with_songbirds:0 "Excursion to Listen to Songbirds"
+ activity_VIET_relaxation_with_songbirds_desc:0 "[ACTIVITY.GetOwner.GetNamePossessiveOrMy|U] Excursion to Listen to Songbirds"
  activity_VIET_xxxxx:0 "xxxxx"
